ajout des specs
