# services/Chill/chillout-server/src/main/java/ch/heigvd/amt/chillout/entities/ClientEntity.java
@@ -1,8 +1,6 @@
 package ch.heigvd.amt.chillout.entities;
 
 import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import java.io.Serializable;
 import lombok.EqualsAndHashCode;
@@ -21,11 +19,5 @@ public class ClientEntity implements Serializable {
     public ClientEntity(){}
 
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private long id;
-    private String name;
-    private String username;
-    private boolean isAdmin;
-    private String password;
-    private String salt;
+    private String email;
 }
